--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.application.name=cd-backend
 
-spring.datasource.url=jdbc:mariadb://localhost:3306/convert
-spring.datasource.username=root
-spring.datasource.password=
+#spring.datasource.url=jdbc:mariadb://localhost:3306/convert
+spring.datasource.url=jdbc:mariadb://db4free.net:3306/cd-backend
+spring.datasource.username=framework
+spring.datasource.password=framework.groupe6
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 server.servlet.context-path=/api
