--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 spring.application.name=cd-backend
 
-spring.datasource.url=jdbc:mariadb://localhost:3306/convert
-spring.datasource.username=root
-spring.datasource.password=
+#spring.datasource.url=jdbc:mariadb://localhost:3306/convert
+spring.datasource.url=jdbc:mariadb://mysql-framework.alwaysdata.net:3306/framework_convert
+#spring.datasource.username=	root
+spring.datasource.username=framework
+spring.datasource.password=framework.groupe6
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 server.servlet.context-path=/api
@@ -11,7 +13,7 @@ server.servlet.context-path=/api
 # Hibernate (JPA)
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-server.port=8080
+server.port=${PORT:8080}
 server.address=0.0.0.0
 
 springdoc.api-docs.path=/v3/api-docs
