--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=cd-backend
 
 
-spring.datasource.url={SPRING_DATASOURCE_URL}
+spring.datasource.url=${SPRING_DATASOURCE_URL}
 
-spring.datasource.username={SPRING_DATASOURCE_USERNAME}
-spring.datasource.password={SPRING_DATASOURCE_PASSWORD}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
